--- a/src/templates/main.ejs
+++ b/src/templates/main.ejs
@@ -16,7 +16,7 @@
 ## Some achievements 🏆
 
 <% for (let achievement of achievements) { %>
-- <%= achievement %>
+- <%= achievement -%>
 <% } %>
 
 <!-- Blogs -->
@@ -24,7 +24,7 @@
 ## Blogs written ✍️
 
 <% for (let blog of blogs) { %>
-- <%= blog %>
+- <%= blog -%>
 <% } %>
 
 <!-- Skills -->
