:memo: Update Template

--- a/src/templates/main.ejs
+++ b/src/templates/main.ejs
@@ -57,7 +57,10 @@
     <td><%= project.desc %></td>
     <td><a href="<%= project.projectLink %>" target="_blank" rel="noopener noreferrer"><%= project.linkText %></a></td>
   </tr>
-<% } %>
+<% } -%>
+  <tr>
+    <td colspan="3" align="center"><a href="https://github.com/varunKT001?tab=repositories">View all projects</a></td>
+  </tr>
 </tbody>
 </table>
 
