--- a/src/templates/main.ejs
+++ b/src/templates/main.ejs
@@ -6,7 +6,7 @@
 
 ## About me 👦
 
-- 🔭 I'm currently learning <% for(let lang of currentlyLearning) { %><%= lang %><%= currentlyLearning.indexOf(lang) === currentlyLearning.length-2 ? ' and ' : currentlyLearning.indexOf(lang) === currentlyLearning.length-1 ? '' : ', ' %><% } %>.
+- 🔭 I'm passionate about <% for(let lang of currentlyLearning) { %><%= lang %><%= currentlyLearning.indexOf(lang) === currentlyLearning.length-2 ? ' and ' : currentlyLearning.indexOf(lang) === currentlyLearning.length-1 ? '' : ', ' %><% } %>.
 - 🌱 I'm looking for open-source/internship opportunities.
 - ✨ Find all my projects at [**varuntiwari.com**](https://varuntiwari.com/)
 - 📫 How to reach me **tiwarivarun819.vt33.vt@gmail.com**
